<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_outfits"
        android:icon="@drawable/ic_outfit"
        android:title="@string/title_outfits" />

    <item
        android:id="@+id/navigation_wardrobe"
        android:icon="@drawable/ic_wardrobe"
        android:title="@string/title_wardrobe" />

    <!-- Center placeholder for FAB -->
    <item
        android:id="@+id/navigation_try_on"
        android:icon="@android:color/transparent"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu> 